test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/skip-with-compensating-controls/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: vpol-check-deployment-labels-binding
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: ValidatingPolicy
    name: check-deployment-labels
spec:
  policyName: vpol-check-deployment-labels
  validationActions:
  - Deny
